edit homepage route

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://adriannbhp.github.io/portofolio",
-  "name": "portofolio",
+  "homepage": "https://adriannbhp.github.io/portofolio/developerFolio",
+  "name": "developerFolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
