--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adriannbhp.github.io/portofolio/developerFolio",
+  "homepage": "https://adriannbhp.github.io/portofolio/my",
   "name": "developerFolio",
   "version": "0.1.0",
   "private": true,
