--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://adriannbhp.github.io/portofolio/my",
-  "name": "developerFolio",
+  "homepage": "https://adriannbhp.github.io/portofolio/adriannbhp",
+  "name": "adriannbhp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
